# reglex-ai

./: .gitignore  Cloud_Architecture.md  DEPLOY_COMPLETE.ps1  README.md  create-env-file.ps1  create_test_pdf.py  deploy-frontend-gcloud.sh  deploy-windows.ps1  flowchart.md  setup-environment.py  test.txt  test_frontend_upload.js  url.md
Backend/: .env.example  Dockerfile  LICENSE  README.md  app.yaml  deploy-gcloud.sh  pyproject.toml  requirements.txt  start_server.py  vercel.json
Backend/src/extraction/: extract_pipeline.py
Backend/src/pipeline/: run_pipeline.py
Backend/src/summerizer/: llm_client.py
Frontend/: .env.production  .gitignore  API-Documentation.md  Dockerfile  EXAMPLE_JSON_EXPORT.md  PDF_EXPORT_FEATURES.md  QWEN.md  README.md  jest.config.js  jest.setup.js  middleware.ts  next.config.js  plan.md  playwright.config.ts  postman-guide.md  tailwind.config.js  test-upload.js  vercel.json  workflow.md
Frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
Frontend/app/(auth)/: layout.tsx
Frontend/app/dashboard/: layout.tsx  loading.tsx  page-backup.tsx  page.tsx
Frontend/app/help/: page.tsx
Frontend/app/test-export/: page.tsx
Frontend/components/dashboard/: DashboardNav.tsx
Frontend/components/shared/: ExportButton.tsx  analytics-provider.tsx  error-boundary.tsx  (+5 more)
Frontend/contexts/: auth-context.tsx
Frontend/e2e/: dashboard.spec.ts  global-setup.ts  landing.spec.ts
Frontend/hooks/: use-compliance.ts  use-realtime-dashboard.ts  use-security.ts  use-toast.ts
(+23 files in other folders)
